objects/Media__c.object
<CustomObject>
    <description>Force.com Handbook Dev401.
The media object is the master table to store the collection of media. Books and videos are separated by record
type to show different types of media.</description>
    <fields>
        <fullName>BookIssueDate__c</fullName>
        <label>BookIssueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <label>ISBN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Media</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MD-{00000}</displayFormat>
        <label>Media UID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>